@@ -108,24 +108,6 @@ This variable is a substitute for `mm-text-coding-system'.")
   "Text coding system for write.
 This variable is a substitute for `mm-text-coding-system-for-write'.")
 
-;; Define `emacs-mule' coding system for XEmacs.
-(when (and
-       (featurep 'xemacs)
-       (featurep 'mule)
-       (not (find-coding-system 'emacs-mule)))
-  (define-ccl-program emacs-mule-codec
-    (if (fboundp 'ccl-compile-write-multibyte-character)
-	'(1
-	  (loop
-	   (read-multibyte-character r0 r1)
-	   (write-multibyte-character r0 r1)
-	   (repeat)))
-      '(1 (loop (read r0) (write-repeat r0)))))
-  (make-coding-system 'emacs-mule 'ccl
-		      "FSF Emacs internal format used in buffer and string."
-		      '(decode emacs-mule-codec
-			encode emacs-mule-codec)))
-
 (defvar nnheader-auto-save-coding-system
   (cond
    ((boundp 'MULE) '*internal*)
